<resources>
    <string name="app_name">HeartBeat</string>
    <string name="output_hint">
        Please place your finger on the device\'s camera, covering the flash as well.\nAfter
        10 seconds, you can export the results with the Share button. \n\nThis utility works
        by measuring the amount of red it sees through the camera, and attempting to detect the
        fluctuations. \nIt works better in a darkened room, and when the pressure on the camera
        is constant. \nIn case there are multiple cameras on your device, make sure that most your
        finger covers the entire field of view. </string>
    <string name="output_header_template">Heart rate raw data as of %s</string>
    <string name="output_body_template">Final result:\n%s\nNormalized results and detected peaks:\n%s</string>
    <string name="output_detected_peaks_header">Detected Peaks:</string>
    <string name="send_output_to">Send output to:</string>
    <string name="separator">,</string>
    <string name="row_separator">\n</string>
    <string name="raw_values">Measurements (Timestamp, Value)</string>
    <string name="share_button_description">Share</string>
    <string name="cameraPermissionRequired">Camera permission is required for this application to work.</string>
    <string name="noFlashWarning">Measurement without flash is less reliable.</string>
    <string name="new_measurement">New Measurement</string>
    <string name="export_result">Export Result</string>
    <string name="export_details">Export Details</string>
    <string name="measure">Measure</string>
    <string name="help">Help</string>
    <string name="history">History</string>
    <string name="clickToMeasure">CLICK TO MEASURE</string>
    <string name="measuring">MEASURE...</string>
    <string name="your_name">Your name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm password</string>
    <string name="register">Register</string>
    <string name="login">Login</string>
    <plurals name="measurement_output_template">
        <item quantity="zero">%2.0f</item>
        <item quantity="one">%2.0f</item>
        <item quantity="other">%2.0f</item>
    </plurals>
</resources>
