<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:descendantFocusability="afterDescendants"
    android:focusable="auto"
    tools:context=".MainActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/topAppBar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/colorBlack"
            app:title="Đo nhịp tim"
            app:titleTextColor="@color/colorWhite"
            app:navigationIcon="@drawable/ic_baseline_menu_24"
            style="@style/Widget.MaterialComponents.Toolbar.PrimarySurface" />

        <com.google.android.material.tabs.TabLayout
            android:id="@+id/tabs"
            android:layout_height="50dp"
            android:layout_width="match_parent"
            android:background="@color/colorBlack"
            app:tabTextColor="@color/colorWhite">

            <com.google.android.material.tabs.TabItem
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/help"
                />

            <com.google.android.material.tabs.TabItem
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/measure"
                />
            <com.google.android.material.tabs.TabItem
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/history"
                />
        </com.google.android.material.tabs.TabLayout>

    </com.google.android.material.appbar.AppBarLayout>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        tools:context=".MainActivity"
        tools:showIn="@layout/activity_main"
        >
        <androidx.viewpager.widget.ViewPager
            android:id="@+id/viewpage"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>
        </androidx.constraintlayout.widget.ConstraintLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/floatingActionButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_marginEnd="64dp"
        android:layout_marginBottom="64dp"
        android:clickable="false"
        android:contentDescription="@string/share_button_description"
        android:focusable="true"
        android:onClick="onClickShareButton"
        app:backgroundTint="@color/colorAccent"
        app:srcCompat="@android:drawable/ic_menu_share"
        android:visibility="gone"/>
</androidx.coordinatorlayout.widget.CoordinatorLayout>